On-Screen Chat: Fixed an issue where on Mac OSX and Firefox 48+ the close icon of the rightest chatwindow was unclickable caused by overlapping scrollbar

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -11503,6 +11503,9 @@ div.ilPCMyCoursesPath {
   pointer-events: none;
   z-index: 1039;
 }
+#onscreenchat-container .iosOnScreenChat{
+  margin-right: -3px;
+}
 #onscreenchat-container .popover {
   max-width: 200px;
 }
